Document Pulsar burst drain benchmark and Mac compose support (#7)
## Summary

Updates the public benchmark and profile documentation to reflect the latest
`streamkernel_pulsar_source_kafka` run as a seeded backlog burst-drain benchmark,
rather than a 10-minute sustained throughput claim.

Also clarifies the required local certificate generation step and improves the
Docker Compose setup for Mac and Apple Silicon users.

## Changes

- Documented the May 12, 2026 Pulsar source Kafka run:
  - 253,235 records published/delivered from Pulsar
  - 253,235 records written to Kafka
  - Peak speedometer window of ~15.6K records/sec
  - Backlog drained in roughly 20 seconds
  - `errorTotal=0`, `DROPPED=0`, clean shutdown
- Clarified that the remaining runner time is idle stability, not sustained load.
- Added guidance for `scripts/gen-certs.sh`, including Windows Git Bash usage.
- Updated `gen-certs.sh` to generate Confluent `*_creds` files required by the broker.
- Added Mac / Apple Silicon compose support via `STREAMKERNEL_DOCKER_PLATFORM`.
- Added `init: true` and longer health windows for broker and Pulsar.
- Replaced stale doc container names with current Compose names.

## Validation

- `docker compose config --quiet`
- `docker compose --profile pulsar config --quiet`
- `docker compose --profile delta-spark config --quiet`
- `docker compose --profile oidc config --quiet`
- `docker compose --profile postgres config --quiet`
- `docker compose --profile mongo config --quiet`
- Rendered all profiles together successfully
- `git diff --check`
- Verified no stale `arena-broker` or `streamkernel-opa-1` doc references remain

## Notes

This PR does not claim native macOS runtime validation. The Compose configuration
now defaults to `linux/amd64` for Docker Desktop compatibility, which supports
Apple Silicon through emulation unless users explicitly override the platform.